SERVER-63530 Lowering error level of TTL tasks that fail on SSV